// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment should render AnonymousUser 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-16 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-16.emotion-16 {
  font-weight: 600;
}

.emotion-16.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-20 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-20.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-20:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="anonymous"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Dr. Anonymous
          </div>
        </div>
        <div
          class="emotion-12 emotion-13"
        >
          Source
        </div>
      </div>
    </header>
    <div
      class="emotion-14 emotion-15"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-16 emotion-17"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-18 emotion-19"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render PendingApproval 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render PendingUserChanges 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render Rejected 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render VerifiedUser 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="extra-classname emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutFlair 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Source
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutImage 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-7 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-9 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-11 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-13 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-17 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-17.emotion-17 {
  font-weight: 600;
}

.emotion-17.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-21.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <svg
        class="emotion-4"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <div
        class="emotion-5 emotion-6"
      >
        <div
          class="emotion-7 emotion-8"
        >
          <div
            class="emotion-9 emotion-10"
          >
            Signed Up User
          </div>
          <div
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-13 emotion-14"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-15 emotion-16"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-17 emotion-18"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-19 emotion-20"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-21"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutPreferredName 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Fallback User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          Flair
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Comment should render WithoutSource 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-template-rows: max-content auto;
  gap: 12px;
}

.emotion-0:target {
  border: 2px solid #e91e63;
  border-radius: 20px;
  scroll-margin-top: 80px;
  padding: 16px;
}

.emotion-2 {
  display: grid;
  grid-template-columns: max-content 1fr;
  gap: 16px;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
  width: 46px;
  height: 46px;
  border-radius: 50%;
}

.emotion-8 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
}

.emotion-10 {
  font-size:line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  font-weight: 700;
}

.emotion-12 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0288d1;
}

.emotion-14 {
  font-size: 0.75em;
  font-weight: 300;
}

.emotion-18 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
}

.emotion-18.emotion-18 {
  font-weight: 600;
}

.emotion-18.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-22.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22:last-child {
  margin-bottom: 0;
}

<article
    class="emotion-0 emotion-1"
    id="verified"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset=""
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <div
          class="emotion-8 emotion-9"
        >
          <div
            class="emotion-10 emotion-11"
          >
            Signed Up User
          </div>
          <div
            class="emotion-12 emotion-13"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Member
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="m23 12-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
              />
            </svg>
          </div>
        </div>
        <div
          class="emotion-14 emotion-15"
        >
          29.06.2023 09:39
        </div>
      </div>
    </header>
    <div
      class="emotion-16 emotion-17"
    >
      <h1
        class="MuiTypography-root MuiTypography-body1 emotion-18 emotion-19"
      >
        de Finibus Bonorum et Malorum
      </h1>
      <div
        class="emotion-20 emotion-21"
      >
        <div
          data-gramm="false"
          data-slate-editor="true"
          data-slate-node="value"
          style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-22"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
              </span>
            </span>
          </p>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
